feat: Use List.toList() for improved readability in getAfflictionsByCategory method